# solubility_prediction

./: README.md  example_use_case.ipynb  modeling_classification_descriptors.ipynb  preprocessing.ipynb
backend/: main.py  pyproject.toml
backend/app/schemas/: prediction.py
backend/app/services/: predictor.py
