[project]
name = "solubility_predictor"
version = "0.1.0"
description = "Solubility predictor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "joblib>=1.5.0",
    "pandas>=2.2.3",
    "rdkit>=2025.3.1",
    "scikit-learn>=1.6.1",
    "shap>=0.47.2",
]

[tool.ruff]
line-length = 88  # Match Black's default
lint.select = ["E", "F", "I"]  # E = pycodestyle, F = pyflakes, I = isort
lint.ignore = []
exclude = ["venv", ".venv", "migrations"]
